--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -19,3 +19,20 @@ spring:
             - Path=/auth-service/**
           filters:
             - StripPrefix=1
+        - id: demo-portal
+          uri: lb://demo-portal
+          predicates:
+            - Path=/demo-portal/**
+          filters:
+            - StripPrefix=1
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: 'http://localhost:8401/rsa/publicKey'
+
+secure:
+  ignore:
+    urls: #免校验路径
+      - "/auth-service/oauth/token"
+
